added brew_tags, yum_repos composes, and active to product_streams models
