# corgi/api/serializers.py
@@ -842,6 +842,9 @@ class ProductStreamSerializer(serializers.ModelSerializer):
             "ofuri",
             "name",
             "cpe",
+            "brew_tags",
+            "yum_repositories",
+            "composes",
             "description",
             # "coverage",
             "build_count",
